# fermi-term

./: Cargo.toml  README.md
src/: config.rs  main.rs  renderer.rs  terminal.rs
