[package]
name = "fermi-term"
version = "0.2.0"
edition = "2021"
description = "The fastest, most easy-to-use terminal emulator. Written in Rust."
license = "MIT"

[[bin]]
name = "fermi-term"
path = "src/main.rs"

[dependencies]
wgpu = "0.19"
winit = "0.29"
fontdue = "0.8"
portable-pty = "0.8"
vte = "0.11"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
